noinst_LTLIBRARIES = libsub_content.la

libsub_content_la_SOURCES = \
	content.cc \
	content.h \
	content_file.h \
	delegator.cc \
	delegator.h \
	delegator_chunk.cc \
	delegator_chunk.h \
	delegator_piece.h \
	delegator_piece.cc \
	delegator_reservee.h \
	delegator_reservee.cc \
	delegator_select.cc \
	delegator_select.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
