noinst_LTLIBRARIES = libsub_data.la

libsub_data_la_SOURCES = \
	entry_list.cc \
	entry_list.h \
	entry_list_node.cc \
	entry_list_node.h \
	file.cc \
	file.h \
	file_manager.cc \
	file_manager.h \
	file_meta.h \
	file_stat.cc \
	file_stat.h \
	hash_chunk.cc \
	hash_chunk.h \
	hash_queue.cc \
	hash_queue.h \
	hash_queue_node.cc \
	hash_queue_node.h \
	hash_torrent.cc \
	hash_torrent.h \
	memory_chunk.cc \
	memory_chunk.h \
	path.cc \
	path.h \
	piece.h \
	storage.cc \
	storage.h \
	storage_chunk.cc \
	storage_chunk.h \
	storage_chunk_part.cc \
	storage_chunk_part.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
