noinst_LTLIBRARIES = libsub_dht.la

libsub_dht_la_SOURCES = \
	dht_bucket.cc \
	dht_bucket.h \
	dht_hash_map.h \
	dht_node.cc \
	dht_node.h \
	dht_router.cc \
	dht_router.h \
	dht_server.cc \
	dht_server.h \
	dht_size_list.h \
	dht_tracker.cc \
	dht_tracker.h \
	dht_transaction.cc \
	dht_transaction.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
