noinst_LTLIBRARIES = libsub_download.la

libsub_download_la_SOURCES = \
	available_list.cc \
	available_list.h \
	choke_manager.cc \
	choke_manager.h \
	connection_list.cc \
	connection_list.h \
	delegator.cc \
	delegator.h \
	delegator_chunk.cc \
	delegator_chunk.h \
	delegator_piece.h \
	delegator_piece.cc \
	delegator_reservee.h \
	delegator_reservee.cc \
	delegator_select.cc \
	delegator_select.h \
	download_main.cc \
	download_main.h \
	download_manager.cc \
	download_manager.h \
	download_setup.cc \
	download_wrapper.cc \
	download_wrapper.h \
	priority.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
