noinst_LTLIBRARIES = libsub_download.la

libsub_download_la_SOURCES = \
	available_list.cc \
	available_list.h \
	choke_manager.cc \
	choke_manager.h \
	chunk_selector.cc \
	chunk_selector.h \
	chunk_statistics.cc \
	chunk_statistics.h \
	connection_list.cc \
	connection_list.h \
	delegator.cc \
	delegator.h \
	delegator_chunk.cc \
	delegator_chunk.h \
	delegator_piece.h \
	delegator_piece.cc \
	delegator_reservee.h \
	delegator_reservee.cc \
	download_constructor.cc \
	download_constructor.h \
	download_info.h \
	download_main.cc \
	download_main.h \
	download_manager.cc \
	download_manager.h \
	download_wrapper.cc \
	download_wrapper.h \
	peer_list.cc \
	peer_list.h \
	priority.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
