noinst_LTLIBRARIES = libsub_download.la

libsub_download_la_SOURCES = \
	available_list.cc \
	available_list.h \
	choke_manager.cc \
	choke_manager.h \
	choke_manager_node.h \
	chunk_selector.cc \
	chunk_selector.h \
	chunk_statistics.cc \
	chunk_statistics.h \
	delegator.cc \
	delegator.h \
	download_constructor.cc \
	download_constructor.h \
	download_info.h \
	download_main.cc \
	download_main.h \
	download_manager.cc \
	download_manager.h \
	download_wrapper.cc \
	download_wrapper.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
