noinst_LTLIBRARIES = libsub_net.la

libsub_net_la_SOURCES = \
	address_list.cc \
	address_list.h \
	data_buffer.h \
	listen.cc \
	listen.h \
	protocol_buffer.h \
	socket_base.cc \
        socket_base.h \
	socket_datagram.cc \
	socket_datagram.h \
	socket_fd.cc \
	socket_fd.h \
	socket_set.cc \
	socket_set.h \
	socket_stream.cc \
	socket_stream.h \
	throttle_list.cc \
	throttle_list.h \
	throttle_node.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
