noinst_LTLIBRARIES = libsub_peer.la

libsub_peer_la_SOURCES = \
	peer_connection_base.cc \
	peer_connection_base.h \
	peer_factory.cc \
	peer_factory.h \
        peer_info.h \
	protocol_base.h \
	protocol_chunk.cc \
	protocol_chunk.h \
	protocol_buffer.h \
	protocol_read.h \
	protocol_write.h \
	request_list.cc \
	request_list.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
