noinst_LTLIBRARIES = libsub_protocol.la

libsub_protocol_la_SOURCES = \
        handshake.cc \
        handshake.h \
        handshake_incoming.cc \
        handshake_incoming.h \
        handshake_manager.cc \
        handshake_manager.h \
        handshake_outgoing.cc \
        handshake_outgoing.h \
	peer_connection_base.cc \
	peer_connection_base.h \
	peer_factory.cc \
	peer_factory.h \
        peer_info.h \
	protocol_base.h \
	protocol_chunk.cc \
	protocol_chunk.h \
	protocol_read.h \
	protocol_write.h \
	request_list.cc \
	request_list.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
