noinst_LTLIBRARIES = libsub_protocol.la

libsub_protocol_la_SOURCES = \
        encryption_info.h \
        extensions.cc \
        extensions.h \
        handshake.cc \
        handshake.h \
	handshake_encryption.cc \
	handshake_encryption.h \
        handshake_manager.cc \
        handshake_manager.h \
	initial_seed.cc \
	initial_seed.h \
	peer_chunks.h \
	peer_connection_base.cc \
	peer_connection_base.h \
	peer_connection_leech.cc \
	peer_connection_leech.h \
	peer_factory.cc \
	peer_factory.h \
	protocol_base.h \
	request_list.cc \
	request_list.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
