libtorrent_torrent_files = files(
  'data/block.cc',
  'data/block_list.cc',
  'data/chunk_utils.cc',
  'data/download_data.cc',
  'data/file.cc',
  'data/file_list.cc',
  'data/file_list_iterator.cc',
  'data/file_manager.cc',
  'data/file_utils.cc',
  'data/transfer_list.cc',
  'download/choke_group.cc',
  'download/choke_queue.cc',
  'download/download_manager.cc',
  'download/resource_manager.cc',
  'net/address_info.cc',
  'net/fd.cc',
  'net/http_get.cc',
  'net/http_stack.cc',
  'net/resolver.cc',
  'net/socket_address.cc',
  'net/socket_address_key.cc',
  'net/socket_event.cc',
  'net/utils.cc',
  'peer/client_info.cc',
  'peer/client_list.cc',
  'peer/connection_list.cc',
  'peer/peer.cc',
  'peer/peer_info.cc',
  'peer/peer_list.cc',
  'tracker/dht_controller.cc',
  'tracker/manager.cc',
  'tracker/tracker.cc',
  'tracker/wrappers.cc',
  'utils/directory_events.cc',
  'utils/log.cc',
  'utils/log_buffer.cc',
  'utils/option_strings.cc',
  'utils/random.cc',
  'utils/resume.cc',
  'utils/scheduler.cc',
  'utils/signal_bitfield.cc',
  'utils/thread.cc',
  'utils/uri_parser.cc',
  'bitfield.cc',
  'chunk_manager.cc',
  'connection_manager.cc',
  'download.cc',
  'error.cc',
  'event.cc',
  'exceptions.cc',
  'hash_string.cc',
  'object.cc',
  'object_static_map.cc',
  'object_stream.cc',
  'path.cc',
  'poll_epoll.cc',
  'poll_kqueue.cc',
  'rate.cc',
  'throttle.cc',
  'torrent.cc',
)

libtorrent_torrent = static_library(
  'torrent_torrent',
  libtorrent_torrent_files,
  gnu_symbol_visibility: 'hidden',
  dependencies: [atomic_dep, curl_dep, execinfo_dep, kqueue_dep, socket_dep, ssl_dep, thread_dep, zlib_dep],
  include_directories: incdirs,
)

install_headers(
  'data/block.h',
  'data/block_list.h',
  'data/block_transfer.h',
  'data/chunk_utils.h',
  'data/download_data.h',
  'data/file.h',
  'data/file_list.h',
  'data/file_list_iterator.h',
  'data/file_manager.h',
  'data/file_utils.h',
  'data/piece.h',
  'data/transfer_list.h',
  'download/choke_group.h',
  'download/choke_queue.h',
  'download/download_manager.h',
  'download/group_entry.h',
  'download/resource_manager.h',
  'bitfield.h',
  'chunk_manager.h',
  'common.h',
  'connection_manager.h',
  'download.h',
  'download_info.h',
  'error.h',
  'exceptions.h',
  'event.h',
  'hash_string.h',
  'object.h',
  'object_raw_bencode.h',
  'object_static_map.h',
  'object_stream.h',
  'path.h',
  'poll.h',
  'rate.h',
  'throttle.h',
  'torrent.h',
  'net/address_info.h',
  'net/fd.h',
  'net/http_get.h',
  'net/http_stack.h',
  'net/resolver.h',
  'net/socket_address.h',
  'net/socket_address_key.h',
  'net/socket_event.h',
  'net/types.h',
  'net/utils.h',
  'peer/choke_status.h',
  'peer/client_info.h',
  'peer/client_list.h',
  'peer/connection_list.h',
  'peer/peer.h',
  'peer/peer_info.h',
  'peer/peer_list.h',
  'tracker/dht_controller.h',
  'tracker/manager.h',
  'tracker/tracker.h',
  'tracker/tracker_state.h',
  'tracker/wrappers.h',
  'utils/chrono.h',
  'utils/directory_events.h',
  'utils/extents.h',
  'utils/log.h',
  'utils/log_buffer.h',
  'utils/option_strings.h',
  'utils/ranges.h',
  'utils/resume.h',
  'utils/scheduler.h',
  'utils/signal_bitfield.h',
  'utils/thread.h',
  'utils/uri_parser.h',
  subdir: 'torrent',
)
