noinst_LTLIBRARIES = libsub_tracker.la

libsub_tracker_la_SOURCES = \
	tracker_base.h \
	tracker_control.cc \
	tracker_control.h \
	tracker_http.cc \
	tracker_http.h \
	tracker_list.cc \
	tracker_list.h \
	tracker_manager.cc \
	tracker_manager.h \
	tracker_udp.cc \
	tracker_udp.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
