noinst_LTLIBRARIES = libsub_utils.la

libsub_utils_la_SOURCES = \
        bitfield.cc \
        bitfield.h \
	bitfield_counter.h \
	bitfield_ext.h \
	ranges.cc \
	ranges.h \
	rate.cc \
	rate.h \
	ref_anchored.h \
	string_manip.cc \
	string_manip.h \
	sha1.h \
	sha_fast.cc \
	sha_fast.h \
	task.h \
	task_schedule.cc \
	task_schedule.h \
	throttle.h \
	throttle_control.h \
	throttle_list.h \
	throttle_node.h \
	timer.h \
	unordered_vector.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
