noinst_LTLIBRARIES = libsub_utils.la

libsub_utils_la_SOURCES = \
        bitfield.cc \
        bitfield.h \
	bitfield_counter.h \
	bitfield_ext.h \
	ranges.cc \
	ranges.h \
	string_manip.cc \
	string_manip.h \
	sha1.h \
	task.h \
	task_item.h \
	task_scheduler.cc \
	task_scheduler.h \
	throttle.h \
	throttle_control.h \
	throttle_list.h \
	throttle_node.h \
	timer.h \
	unordered_vector.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
