noinst_LTLIBRARIES = libsub_utils.la

libsub_utils_la_SOURCES = \
        bitfield.cc \
        bitfield.h \
	bitfield_counter.h \
	bitfield_ext.h \
	string_manip.cc \
	string_manip.h \
	sha1.h \
	task_item.h \
	task_scheduler.cc \
	task_scheduler.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(top_srcdir)
