noinst_LTLIBRARIES = libsub_torrentdownload.la

libsub_torrentdownload_la_SOURCES = \
	choke_group.h \
	choke_group.cc \
	download_manager.cc \
	download_manager.h \
	resource_manager.cc \
	resource_manager.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(srcdir)/../.. -I$(top_srcdir)

libtorrentincludedir = $(includedir)/torrent/download
libtorrentinclude_HEADERS = \
	choke_group.h \
	download_manager.h \
	resource_manager.h
