noinst_LTLIBRARIES = libsub_torrentpeer.la

libsub_torrentpeer_la_SOURCES = \
	choke_status.h \
	client_info.cc \
	client_info.h \
	client_list.cc \
	client_list.h \
	connection_list.cc \
	connection_list.h \
	peer.cc \
	peer.h \
        peer_info.cc \
        peer_info.h \
	peer_list.cc \
	peer_list.h

INCLUDES = -I$(srcdir) -I$(srcdir)/.. -I$(srcdir)/../.. -I$(top_srcdir)

libtorrentincludedir = $(includedir)/torrent/peer
libtorrentinclude_HEADERS = \
	choke_status.h \
	client_info.h \
	client_list.h \
	connection_list.h \
	peer.h \
        peer_info.h \
	peer_list.h
